--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .standout {  
-  background-image: url('../images/stand_out.jpg');
+  background-image: url('/images/stand_out.jpg');
   background-repeat: no-repeat;
   
 }
