--- a/css/main.css
+++ b/css/main.css
@@ -5,4 +5,7 @@
 }
 
 h1 {
-font-family: 'Lato', sans-serif;}
+font-family: 'Raleway', sans-serif;
+color: white;
+font-size: 40px;
+font-weight: bold;}
