--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
-/** {
-	border: 1px solid red;
+/* *{	border: 1px solid red;
 	box-sizing: border-box;
 }/*Fonts*/
 
@@ -35,7 +34,7 @@ h4 {
 
 h5 {
 	font-family: 'Lato', sans-serif;
-	font-size: 18px;
+	font-size: 19px;
 	font-weight: lighter;
 	letter-spacing:0.05em;
 }
@@ -49,6 +48,7 @@ h5 {
   height: 100vh;
   
 }
+
 
 /*Background and Text Colors Generated with Coolors.co*/
 /*Background Colors*/
@@ -69,7 +69,21 @@ h5 {
 /*Images*/
 .img {
 	resize: both;
-	width: 100%;
+	
+}
+
+.centerimg {
+	display: flex;
+	align-items: center;
+	width: 100vw;}
+
+.blockimg {
+	display: block;
+	margin: auto;
+	resize:both;
+	z-index: 10;
+	transition: opacity linear 0.5s;
+
 }
 
 /*Links*/
@@ -86,5 +100,47 @@ a:hover {
 .btn {
 	color: #D97F3B;
 }
+
+/*OverLays*/
+
+.overtext {
+	text-align: center;
+	font-family: 'Raleway', sans-serif;
+	color: white;
+	font-size: 16px;
+	z-index: 1;
+	position: absolute;
+	top: 15%;
+  	width: 80%;
+ 	margin: 0 10%;
+ 	opacity: 0;
+ 	transition: opacity linear 0.3s;
+}
+
+.col-md-4:hover img {
+opacity:0;
+}
+
+.col-md-4:hover .overtext {
+	opacity:1;
+}
+
+/*Button OverRide*/
+.btn2 {
+	border-radius: 50%;
+	max-width: 200px;
+	max-height: 200px;
+	height:150px;
+	width: 150px;
+
+}
+
+
+
+
+
+
+
+
 
 
