--- a/css/main.css
+++ b/css/main.css
@@ -1,171 +1,516 @@
-/* *{	border: 1px solid red;
-	box-sizing: border-box;
-}/*Fonts*/
+/* ===========================
+---------  Universal ----------
+=============================*/
 
-h1 {
-font-family: 'Raleway', sans-serif;
-color: white;
-font-size: 40px;
-font-weight: lighter;}
-
-h2{
-	font-family: 'Oswald', sans-serif;
-	color: white;
-	font-size: 70px;
-	font-weight: bold;
-	letter-spacing: .05em;
+/* {
+	border: solid red 1px;
 }
 
-h3 {
-	font-family: 'Lato', sans-serif;
-	font-size: 16px;
-	font-weight: lighter;
-	letter-spacing: 0.2em;
+/* --- Container Override --- */
+.container {
+	width: 100%;
+}
+
+body {
+  background-color: #fff;
 
 }
 
-h4 {
-	font-family: 'Oswald', sans-serif;
-	font-size: 20px;
-	font-weight: lighter;
-	letter-spacing:0.3em;
-
-}
-
-h5 {
-	font-family: 'Lato', sans-serif;
-	font-size: 19px;
-	font-weight: lighter;
-	letter-spacing:0.05em;
-}
-
-/*Background Images*/
-.standout {  
-  background-image: url('../images/stand_out.jpg');
-  background-repeat: no-repeat;
-  background-size: 100%;
-  width: 100vw;
+.fullheight {
   height: 100vh;
-  
+  overflow: hidden;
 }
 
-
-/*Background and Text Colors Generated with Coolors.co*/
-/*Background Colors*/
-.beige {background-color: #B6A489;}
-.lgrey {background-color: #D3D3D3;}
-.dgrey {background-color: #ACACAC;}
-.brown {background-color: #5B4D23;}
-.orange {background-color: #D97F3B;}
-
-/*Text Colors*/
-.text_white{color: white;}
-.text_beige {color: #B6A489;}
-.text_lgrey {color: #D3D3D3;}
-.text_dgrey {color: #ACACAC};
-.text_brown {color: #5B4D23;}
-.text_orange {color: #D97F3B;}
-
-/*Images*/
-.img {
-	resize: both;
-	
-}
-
-.centerimg {
-	display: flex;
-	align-items: center;
-	width: 100vw;}
-
-.blockimg {
-	display: block;
-	margin: auto;
-	resize:both;
-	z-index: 10;
-	transition: opacity linear 0.5s;
-
-}
-
-/*Links*/
-a:link, a:active, a:visited {
-	color: #D3D3D3;
-	text-decoration: none;
+/* ===========================
+----------  Links  -----------
+=============================*/
+a,
+a:active,
+a:visited {
+  color: white;
 }
 
 a:hover {
-	color: #D97F3B;
-	text-decoration: underline;
+  color: #cdc1c4;
 }
 
-.btn {
-	color: #D97F3B;
+
+
+/* ===========================
+----------  Fonts -----------
+=============================*/
+
+@font-face {
+	font-family: Quickpen;
+	src: url("../fonts/Quickpen.otf");
 }
 
-/*OverLays*/
+@import url(https://fonts.googleapis.com/css?family=Work+Sans:400,300,700|Open+Sans:400italic,300italic);
 
-.overtext {
+h1 {
+	font-family: 'Quickpen', sans-serif;
+	font-size: 2.7em;
+	color: #000;
 	text-align: center;
-	font-family: 'Raleway', sans-serif;
-	color: white;
-	font-size: 16px;
-	z-index: 1;
-	position: absolute;
-	top: 15%;
-  	width: 80%;
- 	margin: 0 10%;
- 	opacity: 0;
- 	transition: opacity linear 0.3s;
-}
-
-.col-md-4:hover img {
-opacity:0;
-}
-
-.col-md-4:hover .overtext {
-	opacity:1;
-}
-
-/*Button OverRide*/
-.btn2 {
-	border-radius: 50%;
-	max-width: 200px;
-	max-height: 200px;
-	height:150px;
-	width: 150px;
-
-}
-
-
-/*Learning*/
-
-#ac-wrapper {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, .6);
-    z-index: 1001;
-}
-#popup {
-    width: 555px;
-    height: 255px;
-    background: #FFFFFF;
-    border: 5px solid #000;
-    border-radius: 25px;
-    -moz-border-radius: 25px;
-    -webkit-border-radius: 25px;
-    box-shadow: #64686e 0px 0px 3px 3px;
-    -moz-box-shadow: #64686e 0px 0px 3px 3px;
-    -webkit-box-shadow: #64686e 0px 0px 3px 3px;
-    position: relative;
-    top: 150px;
-    left: 375px;
+	padding: .75em 0;
+	line-height: 1.5em;
 }
 
 
 
+h2{
+	font-family: 'Quickpen', cursive;
+	font-size: 2.2em;
+	color: #fff;
+	text-align: left;
+  padding: 1em 0;
+
+}
+
+p {
+  font-family: 'Quickpen', sans-serif;
+  font-size: 1.6em;
+  text-align: left;
+  color: #fff;
+  line-height: 1.6em;
+
+}
+
+h3 /* ---Feature Text--- */{
+  font-family: 'Lato', sans-serif;
+  font-size: 6em;
+  text-align: center;
+  color: #fff;
+  padding-top: .5em;
+}
+
+h4 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.4em;
+  text-align: center;
+  color: #fff;
+}
+
+/* ===========================
+-------  Page Elements --------
+=============================*/
+.display_tag {
+  top: 80px;
+}
+
+.bg_offwhite {
+  background-color: #e0d7da;
+}
+
+.back2top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  color: #fff;
+}
+
+ul li {
+  list-style: none;
+}
+.logo-wrap {
+  width: 130px;
+  height: 130px;
+
+
+}
+
+.logo {
+ max-width: 100%;
+ height: auto;
+ padding-top: 15px;
+ padding-left: 30px;
+
+
+}
+
+
+.valign_feature {
+  margin-top: 30vh;
+}
+/* ===========================
+-------  Image Styling --------
+=============================*/
+
+
+/* ------ For Outside Container (Body) ------ */
+
+.feature {
+	background: linear-gradient(rgba(129, 108, 131, 0.7), rgba(129, 108, 131, 0.7)), url("../img/feature.png");
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100vh;
+
+}
+
+/* ------ Card Images ----- */
 
 
 
 
+
+
+/* ===========================
+--------  Navigation ---------
+=============================*/
+
+.nav-wrap {
+  position: relative;
+}
+
+.nav-menu {
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: hsla(0, 0%, 100%, 0.2);
+  display: none;
+  opacity: 0;
+}
+
+nav, 
+nav ul {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+}
+
+nav ul li {
+  -webkit-flex-basis: 20%;
+  -ms-flex-preferred-size: 20%;
+  flex-basis: 20%;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content:  center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items:  center;
+  height: 100%;
+  overflow: hidden;
+  opacity: 0;
+  display: none;
+
+}
+
+nav li a {
+  position: relative;
+  top: 46%;
+  color: #fff;
+  text-transform: uppercase;
+  font-family: 'Work sans', sans-serif;
+  font-weight: 300;
+  letter-spacing: 4px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  font-size: 1.3rem;
+  opacity: 0;
+}
+
+nav li a:before {
+  content: '';
+  width: 70px;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  z-index: 100;
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+  opacity: 0;
+  -webkit-transition: all .2s linear;
+  transition: all .2s linear;
+}
+
+nav li a:after {
+  content: attr(data-content);
+  font-size: 1rem;
+  -webkit-transition: all .2s linear;
+  transition: all .2s linear;
+  opacity: 0;
+  position: absolute;
+  z-index: 100;
+  color: #fff;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  left: 0;
+  right: 0;
+  bottom: -50px;
+  text-transform: none;
+  font-family: 'Open sans', sans-serif;
+  font-weight: 300;
+  font-style: italic;
+  letter-spacing: 0;
+}
+
+nav li a:hover:before {
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+  opacity: 1;
+}
+
+nav li a:hover:after {
+  -webkit-transform: translateY(15px);
+  -ms-transform: translateY(15px);
+  transform: translateY(15px);
+  opacity: 1;
+}
+
+nav li:nth-of-type(1) {
+  background-color: #29363B
+}
+
+nav li:nth-of-type(2) {
+  background-color: #EA495F
+}
+
+nav li:nth-of-type(3) {
+  background-color: #F4837D
+}
+
+nav li:nth-of-type(4) {
+  background-color: #FDCEA9
+}
+
+nav li:nth-of-type(5) {
+  background-color: #99B998
+}
+
+/* ====================================
+---------- Menu Icon ------------------
+==================================== */
+
+.triple_lines {
+  position: absolute;
+  right: 5rem;
+  top: 3.2rem;
+  z-index: 100;
+  width: 34px;
+  display: block;
+  cursor: pointer;
+}
+
+.triple_lines span {
+  display: block;
+  height: 1px;
+  background-color: #fff;
+  cursor: pointer;
+  margin-top: 8px;
+}
+
+.animate-top-bar {
+  -webkit-animation: animate-top-bar .6s linear 1 both;
+  animation: animate-top-bar .6s linear 1 both
+}
+
+.animate-bottom-bar {
+  -webkit-animation: animate-bottom-bar .6s linear 1 both;
+  animation: animate-bottom-bar .6s linear 1 both
+}
+
+.animate-middle-bar {
+  -webkit-animation: animate-middle-bar .6s linear 1 both;
+  animation: animate-middle-bar .6s linear 1 both
+}
+
+.animate-out-top-bar {
+  -webkit-animation: animate-out-top-bar .6s linear 1 both;
+  animation: animate-out-top-bar .6s linear 1 both
+}
+
+.animate-out-bottom-bar {
+  -webkit-animation: animate-out-bottom-bar .6s linear 1 both;
+  animation: animate-out-bottom-bar .6s linear 1 both
+}
+
+.animate-out-middle-bar {
+  -webkit-animation: animate-out-middle-bar .6s linear 1 both;
+  animation: animate-out-middle-bar .6s linear 1 both
+}
+
+
+/* ====================================
+Animation keyframes
+==================================== */
+
+@keyframes animate-top-bar {
+  0% {
+    background-color: #fff;
+  }
+  50% {
+    -webkit-transform: translateY(9px);
+    transform: translateY(9px)
+  }
+  80% {
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+    background-color: #fff
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    background-color: #29363B;
+  }
+}
+
+@keyframes animate-bottom-bar {
+  0% {
+    background-color: #fff;
+  }
+  50% {
+    -webkit-transform: translateY(-9px);
+    transform: translateY(-9px)
+  }
+  80% {
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+    background-color: #fff;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    background-color: #29363B;
+  }
+}
+
+@keyframes animate-middle-bar {
+  0% {
+    background-color: #fff;
+  }
+  80% {
+    background-color: #fff;
+  }
+  100% {
+    background-color: #29363B;
+  }
+}
+
+@keyframes animate-out-top-bar {
+  0% {
+    background-color: #29363B
+  }
+  50% {
+    -webkit-transform: translateY(9px);
+    transform: translateY(9px)
+  }
+  80% {
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+    background-color: #29363B
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    background-color: #FFF;
+  }
+}
+
+@keyframes animate-out-bottom-bar {
+  0% {
+    background-color: #29363B
+  }
+  50% {
+    -webkit-transform: translateY(-9px);
+    transform: translateY(-9px)
+  }
+  80% {
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+    background-color: #29363B;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    background-color: #FFF;
+  }
+}
+
+@keyframes animate-out-middle-bar {
+  0% {
+    background-color: #29363B
+  }
+  80% {
+    background-color: #29363B;
+  }
+  100% {
+    background-color: #fff;
+  }
+}
+
+.nav-wrap a {
+  font-family: "Work Sans", sans-serif;
+  color: #222;
+  font-weight: 300;
+  font-size: 12px;
+  text-transform: uppercase;
+  text-decoration: none;
+  position: absolute;
+  z-index: 10;
+  top: 50px;
+  left: 50px;
+  padding-bottom: 3px;
+  border-bottom: 1px solid #222;
+}
+
+@media (max-width: 640px) {
+  nav ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  nav ul li {
+    height: 20%;
+  }
+  nav ul li a {
+    font-size: 11px;
+  }
+  nav li a:after {
+    font-size: 0.6rem;
+    bottom: -25px;
+  }
+  nav li a:hover:after {
+    transform: translateY(0);
+  }
+  .triple_lines {
+    right: 1rem;
+  }
+  nav li a:before {
+    width: 25px;
+  }
+}
+
+
+
+
+/* ===========================
+-------  Media Queries --------
+=============================*/
+
+
+
+/*
+Add Breakpoint for Resizing Background Image Smaller Than 1049
+Maybe Adjust the Image
