--- a/css/main.css
+++ b/css/main.css
@@ -140,7 +140,7 @@ ul li {
 /* ------ For Outside Container (Body) ------ */
 
 .feature {
-	background: linear-gradient(rgba(129, 108, 131, 0.7), rgba(129, 108, 131, 0.7)), url("../img/feature.png");
+	background: linear-gradient(rgba(129, 108, 131, 0.7), rgba(129, 108, 131, 0.7)), url("../images/feature.png");
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 100vh;
@@ -150,28 +150,28 @@ ul li {
 /* ------ Card Images ----- */
 
 .wetlands {
-  background: linear-gradient(rgba(190, 192, 158, 0.7), rgba(190, 192, 158, 0.7)), url("../img/wetlands.jpg");
+  background: linear-gradient(rgba(190, 192, 158, 0.7), rgba(190, 192, 158, 0.7)), url("../images/wetlands.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
 }
 
 .impala {
-  background: linear-gradient(rgba(241, 193, 141, 0.5), rgba(241, 193, 141, 0.5)), url("../img/impala.jpg");
+  background: linear-gradient(rgba(241, 193, 141, 0.5), rgba(241, 193, 141, 0.5)), url("../images/impala.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
 }
 
 .snow_fox {
-  background: linear-gradient(rgba(216, 236, 237, 0.1), rgba(216, 236, 237, 0.5)), url("../img/fox.jpg");
+  background: linear-gradient(rgba(216, 236, 237, 0.1), rgba(216, 236, 237, 0.5)), url("../images/fox.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
 }
 
 .skye {
-  background: linear-gradient(rgba(143, 150, 166, 0.4), rgba(143, 150, 166, 0.5)), url("../img/skye.jpg");
+  background: linear-gradient(rgba(143, 150, 166, 0.4), rgba(143, 150, 166, 0.5)), url("../images/skye.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
